[gd_scene load_steps=9 format=2]

[ext_resource path="res://Visualization/scripts/Visualizer.gd" type="Script" id=1]
[ext_resource path="res://Visualization/resources/sounds/KONGOS - Take It From Me.ogg" type="AudioStream" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Visualization/scripts/ColorScripts.gd" type="Script" id=4]
[ext_resource path="res://Visualization/resources/sounds/Saint Motel - Benny Goodman.ogg" type="AudioStream" id=5]
[ext_resource path="res://Visualization/resources/sounds/SAINT MOTEL - Van Horn (Official Visualizer).ogg" type="AudioStream" id=6]
[ext_resource path="res://Visualization/resources/sounds/Free Shots - Bella Di Notte (Wolfgang Lohr Remix).ogg" type="AudioStream" id=7]
[ext_resource path="res://Visualization/resources/sounds/Ofenbach - Be Mine (Extended).ogg" type="AudioStream" id=8]

[node name="Visualizer" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" type="AudioStreamPlayer" parent="."]

[node name="icon" type="Sprite" parent="."]
visible = false
position = Vector2( 0.212692, -1.6253 )
texture = ExtResource( 3 )

[node name="ColorScripts" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Music_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Music_2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Music_3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Music_4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Music_5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
